--- a/HiringManager.Domain.EntityFramework.UnitTests/packages.config
+++ b/HiringManager.Domain.EntityFramework.UnitTests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.1" targetFramework="net40" requireReinstallation="True" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net40" requireReinstallation="True" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net40" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net40" />
