--- a/HiringManager.Web/Web.config
+++ b/HiringManager.Web/Web.config
@@ -12,11 +12,11 @@
       <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
-    </sectionGroup><section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
-  </configSections>
+    </sectionGroup>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\AspNetAuth.mdf;Initial Catalog=AspNetAuth;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="HiringManager.EntityFramework.Repository" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\HiringManager.EntityFramework.Repository.mdf;Initial Catalog=HiringManager.EntityFramework.Repository;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=HiringManagerAuth;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="HiringManager.EntityFramework.Repository" connectionString="Data Source=.;Initial Catalog=HiringManagerDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -125,17 +125,7 @@
       </handlers>
     </system.webServer>
   </location>
-  <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
-      <!-- If you are having issues with Glimpse, please include this. It will help us figure out whats going on. 
-      <logging level="Trace" />-->
-      
-      <!-- Want to use Glimpse on a remote server? Ignore the LocalPolicy by removing this comment.
-      <runtimePolicies>
-        <ignoredTypes>
-          <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet"/>
-        </ignoredTypes>
-      </runtimePolicies>-->
-    </glimpse>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -146,4 +136,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+      <!-- 
+          For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
+          or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
+      -->
+    </glimpse></configuration>
