--- a/HiringManager.Domain.EntityFramework/HiringManager.EntityFramework.csproj
+++ b/HiringManager.Domain.EntityFramework/HiringManager.EntityFramework.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
+    <Compile Include="UsersContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
