--- a/HiringManager.EntityFramework.Migrations/HiringManager.EntityFramework.Migrations.csproj
+++ b/HiringManager.EntityFramework.Migrations/HiringManager.EntityFramework.Migrations.csproj
@@ -67,6 +67,10 @@
     <Compile Include="201311192144468_FkCleanup.Designer.cs">
       <DependentUpon>201311192144468_FkCleanup.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201404172244396_MakePositionOpenDateRequired.cs" />
+    <Compile Include="Migrations\201404172244396_MakePositionOpenDateRequired.Designer.cs">
+      <DependentUpon>201404172244396_MakePositionOpenDateRequired.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -81,6 +85,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="201311192144468_FkCleanup.resx">
       <DependentUpon>201311192144468_FkCleanup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201404172244396_MakePositionOpenDateRequired.resx">
+      <DependentUpon>201404172244396_MakePositionOpenDateRequired.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -97,6 +104,7 @@
       <Name>HiringManager</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
